--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
 
   <footer>
     <div class="container">
-      Copyright &copy Eric West 2018; 
+      Copyright &copy; Eric West 2018 
     </div>
   </footer>
 </body>
